    added to `c.t.f.http.codec.HttpServerDispatcher`. In addition,
    the codecError in `c.t.f.http.BadHttpRequest` has been replaced
    with the exception thrown by the HttpServerCodec.

  * finagle-mux: `c.t.f.mux.lease.exp.WindowedByteCounter` no longer
    calls `Thread.start()` in its constructor. This should be now be
    done by the caller.
    
  * finagle-mux: The experimental session API was discontinued.

  * finagle-mux: Introduce new Request and Response types for mux services.
    The new mux request includes a `destination` path so that, which corresponds
    to the `destination` field in Tdispatch requests. Furthermore, these new
    types expose `c.t.io.Buf` instead of Netty's ChannelBuffers.

  * finagle-thrift,finagle-thriftmux: `c.t.f.Thrift.Client`, `c.t.f.Thrift.Server`,
    `c.t.f.ThriftMux.Client` and `c.t.f.ThriftMux.Server` have their
    `TProtocolFactory` configured via a `c.t.f.thrift.param.ProtocolFactory`
    `Stack.Param`.

  * finagle-thriftmux: `c.t.f.ThriftMux.Client` now has its `ClientId`
    configured via a `c.t.f.thrift.param.ClientId` `Stack.Param`.

Deprecations
~~~~~~~~~~~~

 * finagle-core: Deprecated the mechanisms of FailureAccrual that use
   factory Transformers.  It's better to just use the Params to
   configure the existing FailureAccrualFactory.  However, if you've
   actually written your own failure accrual transformer that's
   significantly different, then you can do stack.replace() to swap it
   in.

 * finagle-memcached: Have cas() operation return false on NotFound()
   state instead of throw IllegalStateException

New Features
~~~~~~~~~~~~

  * finagle-core: All `Stack.Param`s used in `ClientBuilder` and
    `ServerBuilder` are now publicly exposed for configuration
    parity.

  * finagle-mux: Drain mux servers properly, so that shutdowns can be
    graceful.

6.23.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: `c.t.f.Stackable`s maintained state about which parameters were